2000-07-27  Martin Baulig  <baulig@suse.de>

	* gnome-canvas.c (gnome_canvas_destroy): Destroy may run
	multiple times nowadays.

	* gnome-icon-list.c (gnome_icon_list_clear): This needs to
	mark the icon list as dirty.

2000-07-27  Martin Baulig  <baulig@suse.de>

	* gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_destroy): Destroy
	may run multiple times nowadays.
	* gnome-icon-item.c (iti_destroy): Likewise.

2000-07-26  Martin Baulig  <baulig@suse.de>

	* gnome-icon-list.c: Use the normal canvas/layout scrolling
	methods here. [FIXME: This widget can use some loving.]
	(gnome_icon_list_set_hadjustment): Removed.
	(gnome_icon_list_set_vadjustment): Removed.

	* gnome-canvas.c: Fix scrolling for the new GtkLayout.
	(DISPLAY_X1, DISPLAY_Y1): Removed since it's always zero.
	(gnome_canvas_size_allocate): Use the layout's adjustments
	in the call to scroll_to() rather than DISPLAY_X1/Y1.
	(paint): Use the layout's adjustments to compute draw_x1 and
	draw_y1 rather than DISPLAY_X1/Y1.

	* gnome-less.c: Reflect latest GtkTextBuffer changes.

2000-07-25  Martin Baulig  <baulig@suse.de>

	* gnome-icon-list.c (gil_place_icon): Correctly halign the
	icons at the middle of their labels.

2000-07-25  Martin Baulig  <baulig@suse.de>

	Added new GnomeSelector widget. We'll subclass this for
	files, directories, icons, pixmaps and so on.

	* gnome-icon-selector.[ch]: New files.
	* gnome-file-selector.[ch]: New files.
	* gnome-selectorP.h: New file.

	* gnome-selector.[ch]: New files.
	* selector-demo.c: New demo.

2000-07-25  Martin Baulig  <baulig@suse.de>

	* gnome-entry.[ch]: "privatized" it, added necessary accessor
	functions for the now hidden members and added GtkArg stuff.

	* gnome-procbar.[ch]: Marked this as deprecated and moved
	it into the compat library.

2000-07-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi*.[ch]: "privatized" all structures. code cleanup.
	added necessary accessor functions for the now hidden members.